Align typeahead dropdown to the right of the content, and make sure it can flow across the editor
The typeahead is now added to the body tag, and not as a sibling to the tag where it is used. That way it can be placed on top of the rest of the page. We also let the dropdown take up as much width as it needs, to accommodate very long selections (death causes, I am looking at you!)

--- a/Interface/resources/sass/elements/_typeahead.scss
+++ b/Interface/resources/sass/elements/_typeahead.scss
@@ -25,3 +25,17 @@
     border-top-color: $dark-blue;
     border-radius: 50%;
 }
+
+//because of issues with animations, opacity is not handled correct in the current version of ui-select (0.19.6)
+// @see https://github.com/angular-ui/ui-select/issues/1731
+.ui-select-bootstrap > .ui-select-choices {
+    width: auto;
+    min-width: 100%;
+
+    opacity: 1 !important;
+}
+
+//Prevent very long selected items to flow outside the 'input field'
+.ui-select-bootstrap .ui-select-match-text {
+    overflow: hidden;
+}
